dev/test_programs/INVALID/group12/scan_parse_errors/lvalue_error.go
// 3 is not lvalue

package main;

func main() {
	i := 3
	for i>2 {
		i--
		3--
    }
}